--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:3.8
+FROM python:3
 
 RUN pip install dbworkload[all] 
 
 ENTRYPOINT ["dbworkload"]
 
-CMD ["--help"]
+CMD ["--version"]
