added final page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,7 @@ nav:
     - getting_started/5.md
     - getting_started/6.md
     - getting_started/7.md
+    - getting_started/8.md
   - Docs:
     - docs/installation.md
     - docs/drivers.md
