--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ pymongo = {version = "*", optional = true}
 pyodbc = {version = "*", optional = true}
 mariadb = {version = "*", optional = true}
 google-cloud-spanner = {version = "*", optional = true}
+langchain-core = { version = "^1.0.5", optional = true }
+langchain-openai = { version = "^1.0.2", optional = true }
+langchain-ollama = { version = "^1.0.0", optional = true }
+langgraph = { version = "^1.0.3", optional = true }
+openai = { version = "^2.8.0", optional = true }
 pytdigest = "*"
 plotext = "*"
 plotly = "*"
@@ -50,11 +55,19 @@ odbc = ["pyodbc"]
 mongo = ["pymongo"]
 cassandra = ["cassandra-driver"]
 spanner = ["google-cloud-spanner"]
+convert = [
+  "langchain-core",
+  "langchain-openai",
+  "langchain-ollama",
+  "langgraph",
+  "openai"
+]
 
 [tool.poetry.group.dev.dependencies]
 mkdocs = "^1.6.1"
 mkdocs-material = "^9.6.14"
 mkdocs-click = "^0.9.0"
+
 
 [build-system]
 requires = ["poetry-core"]
