--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,8 @@ google-cloud-spanner = {version = "*", optional = true}
 langchain-core = { version = "^1.0.5", optional = true }
 langchain-openai = { version = "^1.0.2", optional = true }
 langchain-ollama = { version = "^1.0.0", optional = true }
-fastembed = {"^0.7.3", optional = true }
-pgvector = {"^0.4.1", optional = true }
+fastembed = {version = "^0.7.3", optional = true }
+pgvector = {version = "^0.4.1", optional = true }
 langgraph = { version = "^1.0.3", optional = true }
 openai = { version = "^2.8.0", optional = true }
 pytdigest = "*"
